<resources>
    <string name="app_name">Food Nutrition</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="timeout">Error Timeout</string>
    <string name="api_key_limited">Error API Key Limited</string>
    <string name="recipes_not_found">Recipes Not Found</string>
    <string name="recipes_saved">Recipes saved</string>
    <string name="recipes_removed">Recipes removed from favorite</string>

    <!-- menu item & fragments -->
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="food_joke_fragment">Food Joke</string>
    <string name="overview_fragment">Overview</string>
    <string name="ingredients_fragment">Ingredients</string>
    <string name="instruction_fragment">Instruction</string>

    <string name="ic_restaurant">Icon Restaurant</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_available">We\re Back Online</string>
    <string name="you_are_offline_check_your_connection">You are offline. Check your connection!</string>
    <string name="image_recipes">Image Recipes</string>

    <string name="icon_heart">Icon Heart</string>
    <string name="icon_clock">Icon Clock</string>
    <string name="icon_leaf">Icon Leaf</string>
    <string name="icon_check">Icon Check</string>
    <string name="ic_search">Search</string>

    <!-- Bottom Sheet -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerFood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="cheap">Cheap</string>
    <string name="apply">Apply</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="summary">Summary</string>
    <string name="image_view_ingredients">Image View Ingredients</string>
    <string name="ingredients_amount">%.2f %s</string>
    <string name="menu_favorite">Favorite</string>
    <string name="favorite_is_empty">Favorite is Empty</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="all_recipes_removed">All recipes removed</string>
    <string name="please_wait">Please Wait</string>
    <string name="share">Share</string>

</resources>